--- a/style.css
+++ b/style.css
@@ -1,14 +1,20 @@
-.body{
+html,
+body{/*ok*/
   min-width: 1122px;
   min-height: 1750px;
   margin: 0;
   padding: 0;
 }
 
-.header{
+body{/*ok*/
+  background: url("nerds-index.jpg") no-repeat 50%;
+  background-size: 1122px auto;
+}
+
+.header{/*ok*/
   min-height: 84px;
   margin-bottom: 10px;
-
+  background-color: #eeeeee;
 }
 .clearfix::after{
   content: "";
@@ -18,29 +24,21 @@
   height: 125px;
 }
 
-.container{
+.container{/*ok*/
     width: 880px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
     padding: 0 10px;
 }
 .logo{
   float: left;
-  width: 138px;
-  height: 55px;
-  margin-right:auto;
-
+  width: 140px;
+  height: 57px;
 }
+
 .header__nav{
-  width: 500px;
-  float: left;
-}
-.header__nav__itm--trash{
   float: right;
-  width: 110px;
-
+  width: 560px;
 }
-
 
 .slider{
     width: 880px;
